[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/MainMenu/DefaultButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/MainMenu/Menu.gd" type="Script" id=2]
[ext_resource path="res://backgrounds/Project Escape Menu.png" type="Texture" id=3]

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Project Escape Menu" type="Sprite" parent="."]
position = Vector2( 960.056, 540.046 )
scale = Vector2( 1.49995, 1.49995 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 197.045
margin_top = 309.911
margin_right = 270.045
margin_bottom = 424.911
rect_scale = Vector2( 5, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Single Player" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 73.0
rect_scale = Vector2( 1, 1 )
text = "Single Player"

[node name="Multiplayer" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 17.0
margin_right = 73.0
margin_bottom = 30.0
rect_scale = Vector2( 1, 1 )
text = "Multi Player"

[node name="Practice Level" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 34.0
margin_right = 73.0
margin_bottom = 47.0
rect_scale = Vector2( 1, 1 )
text = "Practice Level"

[node name="Story" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 51.0
margin_right = 73.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 1 )
text = "Story"

[node name="Options" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 68.0
margin_right = 73.0
margin_bottom = 81.0
rect_scale = Vector2( 1, 1 )
text = "Options"

[node name="Credits" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 85.0
margin_right = 73.0
margin_bottom = 98.0
rect_scale = Vector2( 1, 1 )
text = "Credits"

[node name="Exit" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 102.0
margin_right = 73.0
margin_bottom = 115.0
rect_scale = Vector2( 1, 1 )
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Single Player" to="." method="_on_DefaultButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Practice Level" to="." method="_on_DefaultButton3_pressed"]
[connection signal="pressed" from="VBoxContainer/Story" to="." method="_on_DefaultButton7_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
